[gd_scene load_steps=6 format=2]

[ext_resource path="res://Goal/GoalLarge.png" type="Texture" id=1]
[ext_resource path="res://Goal/Goal.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 1.00002
height = 3.99995

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 41, 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 41, 2 )

[node name="Goal" type="Node2D"]
scale = Vector2( 6, 6 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -0.5 )
texture = ExtResource( 1 )

[node name="Line" type="StaticBody2D" parent="."]
position = Vector2( 3.55271e-15, 21 )
__meta__ = {
"_edit_group_": true
}

[node name="PostLeft" type="CollisionShape2D" parent="Line"]
position = Vector2( -42, -1 )
shape = SubResource( 1 )

[node name="PostRight" type="CollisionShape2D" parent="Line"]
position = Vector2( 42, -1 )
shape = SubResource( 1 )

[node name="GoalLine" type="CollisionShape2D" parent="Line"]
position = Vector2( -3.55271e-15, -1 )
shape = SubResource( 2 )

[node name="Bar" type="StaticBody2D" parent="."]
position = Vector2( -8.47033e-22, -13 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bar"]
position = Vector2( 8.47033e-22, -1 )
shape = SubResource( 3 )
